--- a/style.css
+++ b/style.css
@@ -29,3 +29,12 @@ footer {
     padding: 10px;
     margin-top: 20px;
 }
+.sensor {
+    display: inline-block;
+    width: 30%;
+    padding: 10px;
+}
+.sensor img {
+    width: 100px;
+    height: 100px;
+}
